# social-account-resolver-mcp

./: .env.example  .gitignore  README.md  login_xhs_browser.py  login_xhs_edge.py  login_xhs_playwright.py  pyproject.toml  server.py  test_ocr_flow.py
app/: __init__.py  config.py  mcp_server.py
app/schemas/: __init__.py  xhs.py
app/services/: __init__.py  mongo_cache.py  rate_limiter.py  xhs_browser.py  xhs_profile.py  xhs_resolver.py  xhs_scorer.py  xhs_search.py
social_account_resolver_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: __init__.py  bilibili.py  database.py  event_parser.py  fydmwd.py  ocr.py  resolver.py  scorer.py  webpage.py  weibo.py  xiaohongshu.py
