[project]
name = "social-account-resolver-mcp"
version = "0.1.0"
description = "MCP server for resolving public social-account candidates across platforms."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "httpx>=0.28.0",
  "lxml>=6.0.0",
  "mcp>=1.27.0",
  "pydantic>=2.13.0",
  "pymongo>=4.17.0",
  "python-dotenv>=1.2.0",
  "rapidfuzz>=3.14.0",
  "selenium>=4.44.0",
  "tencentcloud-sdk-python>=3.1.89",
]

[project.scripts]
social-account-resolver-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "test_ocr_flow", "login_xhs_edge", "login_xhs_browser"]
packages = ["tools"]

[tool.pyright]
pythonVersion = "3.11"
