[project]
name = "social-account-resolver-mcp"
version = "0.1.0"
description = "MCP server for resolving public Xiaohongshu user candidates."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27.0",
  "pymongo>=4.17.0",
  "playwright>=1.56.0",
  "python-dotenv>=1.2.0",
]

[project.scripts]
social-account-resolver-mcp = "app.mcp_server:main"

[tool.setuptools]
py-modules = ["login_xhs_playwright"]
packages = ["app", "app.services", "app.schemas"]

[tool.pyright]
pythonVersion = "3.11"
